--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/kxzNQjtvLr7qI2f1yvCK",
+      "authorship_tag": "ABX9TyNkGmEWywHG2FNYWXBRUtZ3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1982,12 +1982,12 @@
         "y_encoded.head()"
       ],
       "metadata": {
-        "id": "wbAgQYVf04Yu",
-        "outputId": "3a17d560-0b30-46e4-be82-ff7c10031bfc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "id": "wbAgQYVf04Yu",
+        "outputId": "3a17d560-0b30-46e4-be82-ff7c10031bfc"
       },
       "execution_count": 21,
       "outputs": [
@@ -2318,11 +2318,11 @@
         "print(X_train.shape, y_train.shape)"
       ],
       "metadata": {
-        "id": "S5teimI31gI5",
-        "outputId": "9c1f07b8-680b-4271-eef5-04ec56970a32",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S5teimI31gI5",
+        "outputId": "9c1f07b8-680b-4271-eef5-04ec56970a32"
       },
       "execution_count": 24,
       "outputs": [
@@ -2350,11 +2350,11 @@
         "print(X_test.shape, y_test.shape)"
       ],
       "metadata": {
-        "id": "F-grp8c011Nz",
-        "outputId": "9ad1311d-6720-48db-b194-455ce883a885",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "F-grp8c011Nz",
+        "outputId": "9ad1311d-6720-48db-b194-455ce883a885"
       },
       "execution_count": 26,
       "outputs": [
@@ -2396,11 +2396,11 @@
         "print(test_sequences[0][:10])"
       ],
       "metadata": {
-        "id": "X5K323Ga2BPw",
-        "outputId": "de2866f5-9d26-4eb6-ee43-502f15ffb402",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "X5K323Ga2BPw",
+        "outputId": "de2866f5-9d26-4eb6-ee43-502f15ffb402"
       },
       "execution_count": 28,
       "outputs": [
@@ -2417,361 +2417,46 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 570
-        },
-        "id": "2ed0dfff",
-        "outputId": "a2780a09-56ef-4326-f91c-cec9b993e92c"
-      },
+      "cell_type": "markdown",
       "source": [
-        "# Tokenization and Sequencing\n",
-        "# Initialize Tokenizer\n",
-        "num_words = 10000\n",
-        "oov_token = \"<OOV>\"\n",
-        "tokenizer = Tokenizer(num_words=num_words, oov_token=oov_token)\n",
-        "\n",
-        "# Fit tokenizer only on training data\n",
-        "tokenizer.fit_on_texts(X_train)\n",
-        "\n",
-        "# Convert text to sequences\n",
-        "train_sequences = tokenizer.texts_to_sequences(X_train)\n",
-        "test_sequences = tokenizer.texts_to_sequences(X_test)\n",
-        "\n",
-        "# Display a sample of sequences\n",
-        "print(\"\\nSample of training sequences:\")\n",
-        "print(train_sequences[0][:10])\n",
-        "\n",
-        "\n",
-        "# Padding Sequences\n",
+        "Padding Sequences"
+      ],
+      "metadata": {
+        "id": "t4YG0CMC36XJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Determine maxlen from the longest sequence in the training set\n",
         "maxlen = max([len(x) for x in train_sequences])\n",
-        "print(f\"\\nMaximum sequence length in training data: {maxlen}\")\n",
+        "print(f'\\nMaximum sequence length in training data: {maxlen}')\n",
         "\n",
         "X_train_pad = pad_sequences(train_sequences, maxlen=maxlen, padding='post', truncating='post')\n",
         "X_test_pad = pad_sequences(test_sequences, maxlen=maxlen, padding='post', truncating='post')\n",
         "\n",
-        "print(\"\\nShape of padded training sequences (X_train_pad):\")\n",
+        "print('\\nShape of padded training sequences (X_train_pad):')\n",
         "print(X_train_pad.shape)\n",
-        "print(\"\\nShape of padded testing sequences (X_test_pad):\")\n",
+        "print('\\nShape of padded testing sequences (X_test_pad):')\n",
         "print(X_test_pad.shape)\n",
         "\n",
         "# Display a sample of padded sequences\n",
         "print(\"\\nSample of padded training sequences:\")\n",
         "print(X_train_pad[0][:10])"
       ],
-      "execution_count": null,
+      "metadata": {
+        "id": "p2bZCi7F36zy",
+        "outputId": "e9d3db82-8007-49fb-89b3-17ea9fe8b658",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Encoded Target Variable (y_encoded):\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "   negative  neutral  positive\n",
-              "0     False     True     False\n",
-              "1     False    False      True\n",
-              "2     False     True     False\n",
-              "3      True    False     False\n",
-              "4      True    False     False"
-            ],
-            "text/html": [
-              "\n",
-              "  <div id=\"df-6a600bee-586e-4c6d-9ab8-4ac80f17e111\" class=\"colab-df-container\">\n",
-              "    <div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>negative</th>\n",
-              "      <th>neutral</th>\n",
-              "      <th>positive</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>0</th>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1</th>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>2</th>\n",
-              "      <td>False</td>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>3</th>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>4</th>\n",
-              "      <td>True</td>\n",
-              "      <td>False</td>\n",
-              "      <td>False</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "</div>\n",
-              "    <div class=\"colab-df-buttons\">\n",
-              "\n",
-              "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6a600bee-586e-4c6d-9ab8-4ac80f17e111')\"\n",
-              "            title=\"Convert this dataframe to an interactive table.\"\n",
-              "            style=\"display:none;\">\n",
-              "\n",
-              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\" viewBox=\"0 -960 960 960\">\n",
-              "    <path d=\"M120-120v-720h720v720H120Zm60-500h600v-160H180v160Zm220 220h160v-160H400v160Zm0 220h160v-160H400v160ZM180-400h160v-160H180v160Zm440 0h160v-160H620v160ZM180-180h160v-160H180v160Zm440 0h160v-160H620v160Z\"/>\n",
-              "  </svg>\n",
-              "    </button>\n",
-              "\n",
-              "  <style>\n",
-              "    .colab-df-container {\n",
-              "      display:flex;\n",
-              "      gap: 12px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert {\n",
-              "      background-color: #E8F0FE;\n",
-              "      border: none;\n",
-              "      border-radius: 50%;\n",
-              "      cursor: pointer;\n",
-              "      display: none;\n",
-              "      fill: #1967D2;\n",
-              "      height: 32px;\n",
-              "      padding: 0 0 0 0;\n",
-              "      width: 32px;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-convert:hover {\n",
-              "      background-color: #E2EBFA;\n",
-              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "      fill: #174EA6;\n",
-              "    }\n",
-              "\n",
-              "    .colab-df-buttons div {\n",
-              "      margin-bottom: 4px;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert {\n",
-              "      background-color: #3B4455;\n",
-              "      fill: #D2E3FC;\n",
-              "    }\n",
-              "\n",
-              "    [theme=dark] .colab-df-convert:hover {\n",
-              "      background-color: #434B5C;\n",
-              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
-              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
-              "      fill: #FFFFFF;\n",
-              "    }\n",
-              "  </style>\n",
-              "\n",
-              "    <script>\n",
-              "      const buttonEl =\n",
-              "        document.querySelector('#df-6a600bee-586e-4c6d-9ab8-4ac80f17e111 button.colab-df-convert');\n",
-              "      buttonEl.style.display =\n",
-              "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "\n",
-              "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-6a600bee-586e-4c6d-9ab8-4ac80f17e111');\n",
-              "        const dataTable =\n",
-              "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
-              "                                                    [key], {});\n",
-              "        if (!dataTable) return;\n",
-              "\n",
-              "        const docLinkHtml = 'Like what you see? Visit the ' +\n",
-              "          '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
-              "          + ' to learn more about interactive tables.';\n",
-              "        element.innerHTML = '';\n",
-              "        dataTable['output_type'] = 'display_data';\n",
-              "        await google.colab.output.renderOutput(dataTable, element);\n",
-              "        const docLink = document.createElement('div');\n",
-              "        docLink.innerHTML = docLinkHtml;\n",
-              "        element.appendChild(docLink);\n",
-              "      }\n",
-              "    </script>\n",
-              "  </div>\n",
-              "\n",
-              "\n",
-              "    <div id=\"df-4513d6e0-4859-461c-aa12-b4bfe0f998aa\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4513d6e0-4859-461c-aa12-b4bfe0f998aa')\"\n",
-              "                title=\"Suggest charts\"\n",
-              "                style=\"display:none;\">\n",
-              "\n",
-              "<svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
-              "     width=\"24px\">\n",
-              "    <g>\n",
-              "        <path d=\"M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zM9 17H7v-7h2v7zm4 0h-2V7h2v10zm4 0h-2v-4h2v4z\"/>\n",
-              "    </g>\n",
-              "</svg>\n",
-              "      </button>\n",
-              "\n",
-              "<style>\n",
-              "  .colab-df-quickchart {\n",
-              "      --bg-color: #E8F0FE;\n",
-              "      --fill-color: #1967D2;\n",
-              "      --hover-bg-color: #E2EBFA;\n",
-              "      --hover-fill-color: #174EA6;\n",
-              "      --disabled-fill-color: #AAA;\n",
-              "      --disabled-bg-color: #DDD;\n",
-              "  }\n",
-              "\n",
-              "  [theme=dark] .colab-df-quickchart {\n",
-              "      --bg-color: #3B4455;\n",
-              "      --fill-color: #D2E3FC;\n",
-              "      --hover-bg-color: #434B5C;\n",
-              "      --hover-fill-color: #FFFFFF;\n",
-              "      --disabled-bg-color: #3B4455;\n",
-              "      --disabled-fill-color: #666;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart {\n",
-              "    background-color: var(--bg-color);\n",
-              "    border: none;\n",
-              "    border-radius: 50%;\n",
-              "    cursor: pointer;\n",
-              "    display: none;\n",
-              "    fill: var(--fill-color);\n",
-              "    height: 32px;\n",
-              "    padding: 0;\n",
-              "    width: 32px;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart:hover {\n",
-              "    background-color: var(--hover-bg-color);\n",
-              "    box-shadow: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
-              "    fill: var(--button-hover-fill-color);\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-quickchart-complete:disabled,\n",
-              "  .colab-df-quickchart-complete:disabled:hover {\n",
-              "    background-color: var(--disabled-bg-color);\n",
-              "    fill: var(--disabled-fill-color);\n",
-              "    box-shadow: none;\n",
-              "  }\n",
-              "\n",
-              "  .colab-df-spinner {\n",
-              "    border: 2px solid var(--fill-color);\n",
-              "    border-color: transparent;\n",
-              "    border-bottom-color: var(--fill-color);\n",
-              "    animation:\n",
-              "      spin 1s steps(1) infinite;\n",
-              "  }\n",
-              "\n",
-              "  @keyframes spin {\n",
-              "    0% {\n",
-              "      border-color: transparent;\n",
-              "      border-bottom-color: var(--fill-color);\n",
-              "      border-left-color: var(--fill-color);\n",
-              "    }\n",
-              "    20% {\n",
-              "      border-color: transparent;\n",
-              "      border-left-color: var(--fill-color);\n",
-              "      border-top-color: var(--fill-color);\n",
-              "    }\n",
-              "    30% {\n",
-              "      border-color: transparent;\n",
-              "      border-left-color: var(--fill-color);\n",
-              "      border-top-color: var(--fill-color);\n",
-              "      border-right-color: var(--fill-color);\n",
-              "    }\n",
-              "    40% {\n",
-              "      border-color: transparent;\n",
-              "      border-right-color: var(--fill-color);\n",
-              "      border-top-color: var(--fill-color);\n",
-              "    }\n",
-              "    60% {\n",
-              "      border-color: transparent;\n",
-              "      border-right-color: var(--fill-color);\n",
-              "    }\n",
-              "    80% {\n",
-              "      border-color: transparent;\n",
-              "      border-right-color: var(--fill-color);\n",
-              "      border-bottom-color: var(--fill-color);\n",
-              "    }\n",
-              "    90% {\n",
-              "      border-color: transparent;\n",
-              "      border-bottom-color: var(--fill-color);\n",
-              "    }\n",
-              "  }\n",
-              "</style>\n",
-              "\n",
-              "      <script>\n",
-              "        async function quickchart(key) {\n",
-              "          const quickchartButtonEl =\n",
-              "            document.querySelector('#' + key + ' button');\n",
-              "          quickchartButtonEl.disabled = true;  // To prevent multiple clicks.\n",
-              "          quickchartButtonEl.classList.add('colab-df-spinner');\n",
-              "          try {\n",
-              "            const charts = await google.colab.kernel.invokeFunction(\n",
-              "                'suggestCharts', [key], {});\n",
-              "          } catch (error) {\n",
-              "            console.error('Error during call to suggestCharts:', error);\n",
-              "          }\n",
-              "          quickchartButtonEl.classList.remove('colab-df-spinner');\n",
-              "          quickchartButtonEl.classList.add('colab-df-quickchart-complete');\n",
-              "        }\n",
-              "        (() => {\n",
-              "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-4513d6e0-4859-461c-aa12-b4bfe0f998aa button');\n",
-              "          quickchartButtonEl.style.display =\n",
-              "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
-              "        })();\n",
-              "      </script>\n",
-              "    </div>\n",
-              "\n",
-              "    </div>\n",
-              "  </div>\n"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "dataframe",
-              "summary": "{\n  \"name\": \"print(X_train_pad[0][:10])\",\n  \"rows\": 5,\n  \"fields\": [\n    {\n      \"column\": \"negative\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          true,\n          false\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"neutral\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          false,\n          true\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"positive\",\n      \"properties\": {\n        \"dtype\": \"boolean\",\n        \"num_unique_values\": 2,\n        \"samples\": [\n          true,\n          false\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
-            }
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "\n",
-            "Shape of training data (X_train, y_train):\n",
-            "(11712,) (11712, 3)\n",
-            "\n",
-            "Shape of testing data (X_test, y_test):\n",
-            "(2928,) (2928, 3)\n",
-            "\n",
-            "Sample of training sequences:\n",
-            "[830, 11, 1606, 66, 241]\n",
             "\n",
             "Maximum sequence length in training data: 21\n",
             "\n",
