Step 5: Building the Deep Learning Model (LSTM)

--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkGmEWywHG2FNYWXBRUtZ3",
+      "authorship_tag": "ABX9TyOD9GavsLLMuJ4uRW78ux00",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2445,11 +2445,11 @@
         "print(X_train_pad[0][:10])"
       ],
       "metadata": {
-        "id": "p2bZCi7F36zy",
-        "outputId": "e9d3db82-8007-49fb-89b3-17ea9fe8b658",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "p2bZCi7F36zy",
+        "outputId": "e9d3db82-8007-49fb-89b3-17ea9fe8b658"
       },
       "execution_count": 31,
       "outputs": [
@@ -2478,7 +2478,7 @@
         "id": "41c94733"
       },
       "source": [
-        "## Building the Deep Learning Model (LSTM)"
+        "## **Step 5: Building the Deep Learning Model (LSTM)**"
       ]
     },
     {
@@ -2489,7 +2489,7 @@
           "height": 327
         },
         "id": "a653e04a",
-        "outputId": "17e9edcf-8749-45cd-b8d1-bb75d9913881"
+        "outputId": "00fab9b9-8871-4d8a-ddaf-6ab08d35462e"
       },
       "source": [
         "# Model Parameters\n",
@@ -2512,7 +2512,7 @@
         "print(\"Model Architecture Summary:\")\n",
         "model.summary()"
       ],
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
