--- a/notebooks/notebook.ipynb
+++ b/notebooks/notebook.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPENJf1ZkeAmjFX2fywZ5YX",
+      "authorship_tag": "ABX9TyM1obLq40GfYgjPbfNwUAq4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,7 +58,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ab409483",
-        "outputId": "f7192899-101d-49ff-d2fc-6fe7e9f6f1b0"
+        "outputId": "54d1932d-5743-41c2-ab8d-d462c15f6190"
       },
       "source": [
         "import pandas as pd\n",
@@ -76,6 +76,7 @@
         "import nltk\n",
         "import pickle\n",
         "from nltk.corpus import stopwords\n",
+        "from tensorflow.keras.callbacks import EarlyStopping # Import EarlyStopping\n",
         "\n",
         "# Additional Setup\n",
         "plt.style.use('seaborn-v0_8-whitegrid')\n",
@@ -97,7 +98,7 @@
         "\n",
         "print(\"Setup complete and libraries imported successfully.\")"
       ],
-      "execution_count": 50,
+      "execution_count": 80,
       "outputs": [
         {
           "output_type": "stream",
@@ -1354,7 +1355,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 557
+          "height": 537
         },
         "id": "c0b28677",
         "outputId": "4e070170-27ce-4e55-99bf-8fec54d7bbbc"
@@ -1406,7 +1407,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 468
+          "height": 405
         },
         "id": "DEzj9b1jdJoW",
         "outputId": "5dff55ce-277a-432c-d4e1-c75fd7ca96b3"
@@ -1439,7 +1440,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 668
+          "height": 593
         },
         "id": "32afea12",
         "outputId": "a7d4ca31-c615-4e51-8a4c-4e574b7acfc5"
@@ -1495,7 +1496,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 704
+          "height": 624
         },
         "id": "45bb09f3",
         "outputId": "35077221-7075-4932-abf7-cec04cbd7911"
@@ -1549,7 +1550,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 380
+          "height": 519
         },
         "id": "a26d3b6f",
         "outputId": "cd22205d-3f13-4e76-f7c6-cf1b50598134"
@@ -1917,6 +1918,35 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Save Processed Data\n",
+        "\n",
+        "Save the DataFrame with the cleaned text to a CSV file."
+      ],
+      "metadata": {
+        "id": "v9WqXNV2IMuV"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Define the path to save the processed data\n",
+        "processed_data_path = 'Tweets_processed.csv'\n",
+        "\n",
+        "# Save the DataFrame to a CSV file\n",
+        "# index=False prevents pandas from writing the DataFrame index as a column in the CSV\n",
+        "df.to_csv(processed_data_path, index=False)\n",
+        "\n",
+        "print(f\"Processed data saved successfully to '{processed_data_path}'\")"
+      ],
+      "metadata": {
+        "id": "SF1ZjDx8IMGm"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -2296,12 +2326,14 @@
     {
       "cell_type": "code",
       "source": [
+        "# Split Data into Training and Testing Sets\n",
+        "# Use y_encoded (one-hot encoded labels) instead of original y\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y_encoded, test_size=0.2, random_state=42)"
       ],
       "metadata": {
         "id": "7Uerpeib1Fzn"
       },
-      "execution_count": 65,
+      "execution_count": 79,
       "outputs": []
     },
     {
@@ -2638,52 +2670,45 @@
     {
       "cell_type": "code",
       "source": [
-        "epochs = 10\n",
-        "batch_size = 32\n",
+        "epochs = 10  # You can adjust the number of epochs\n",
+        "batch_size = 32 # You can adjust the batch size\n",
         "\n",
-        "print('Starting model training...')\n",
+        "# Implement Early Stopping\n",
+        "# Monitor validation loss and stop training if it doesn't improve for a few epochs\n",
+        "early_stopping = EarlyStopping(monitor='val_loss', patience=3, restore_best_weights=True)\n",
+        "\n",
+        "print('Starting model training with Early Stopping...')\n",
         "history = model.fit(X_train_pad, y_train,\n",
         "                    epochs=epochs,\n",
         "                    batch_size=batch_size,\n",
-        "                    validation_split=0.2,\n",
+        "                    validation_split=0.2, # Use a validation split from the training data\n",
+        "                    callbacks=[early_stopping], # Add the EarlyStopping callback\n",
         "                    verbose=1)\n",
-        "print('Training model finished.')"
+        "print('Model training finished.')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "uiLyYtXH7WlA",
-        "outputId": "ad65e632-d45f-42bc-b1b0-1e0e1a5d245b"
+        "outputId": "ed00a325-c5f0-4329-cce2-a3e19c174d98"
       },
-      "execution_count": 71,
+      "execution_count": 81,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Starting model training...\n",
+            "Starting model training with Early Stopping...\n",
             "Epoch 1/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m18s\u001b[0m 47ms/step - accuracy: 0.6181 - loss: 0.8861 - val_accuracy: 0.7384 - val_loss: 0.6356\n",
+            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 42ms/step - accuracy: 0.9647 - loss: 0.1215 - val_accuracy: 0.7443 - val_loss: 1.0161\n",
             "Epoch 2/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m24s\u001b[0m 82ms/step - accuracy: 0.7809 - loss: 0.5397 - val_accuracy: 0.7525 - val_loss: 0.6098\n",
+            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 42ms/step - accuracy: 0.9689 - loss: 0.1135 - val_accuracy: 0.7392 - val_loss: 1.1072\n",
             "Epoch 3/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m29s\u001b[0m 42ms/step - accuracy: 0.8672 - loss: 0.3864 - val_accuracy: 0.7670 - val_loss: 0.6068\n",
+            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 42ms/step - accuracy: 0.9738 - loss: 0.0939 - val_accuracy: 0.7341 - val_loss: 1.0613\n",
             "Epoch 4/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m20s\u001b[0m 41ms/step - accuracy: 0.8966 - loss: 0.3067 - val_accuracy: 0.7478 - val_loss: 0.6938\n",
-            "Epoch 5/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 42ms/step - accuracy: 0.9226 - loss: 0.2491 - val_accuracy: 0.7469 - val_loss: 0.8214\n",
-            "Epoch 6/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 42ms/step - accuracy: 0.9371 - loss: 0.2073 - val_accuracy: 0.7486 - val_loss: 0.8641\n",
-            "Epoch 7/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m13s\u001b[0m 43ms/step - accuracy: 0.9470 - loss: 0.1845 - val_accuracy: 0.7482 - val_loss: 0.8730\n",
-            "Epoch 8/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m22s\u001b[0m 47ms/step - accuracy: 0.9545 - loss: 0.1616 - val_accuracy: 0.7055 - val_loss: 0.9182\n",
-            "Epoch 9/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 41ms/step - accuracy: 0.9550 - loss: 0.1565 - val_accuracy: 0.7414 - val_loss: 1.0193\n",
-            "Epoch 10/10\n",
-            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 41ms/step - accuracy: 0.9582 - loss: 0.1466 - val_accuracy: 0.7362 - val_loss: 1.0105\n",
-            "Training model finished.\n"
+            "\u001b[1m293/293\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 42ms/step - accuracy: 0.9726 - loss: 0.0943 - val_accuracy: 0.7371 - val_loss: 1.2463\n",
+            "Model training finished.\n"
           ]
         }
       ]
@@ -2918,23 +2943,15 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "4dcc07e7"
-      },
       "source": [
-        "Load the saved model and tokenizer, define new text samples, preprocess them, convert to sequences, pad the sequences, make predictions, map predictions back to labels, and print the results to demonstrate predictions on new data.\n",
-        "\n"
-      ]
+        "Load the saved model and tokenizer, define new text samples, preprocess them, convert to sequences, pad the sequences, make predictions, map predictions back to labels, and print the results to demonstrate predictions on new data.\n"
+      ],
+      "metadata": {
+        "id": "VFu040UTIEH7"
+      }
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7cf06f19",
-        "outputId": "a2cfb390-73e3-47a1-dd10-e0448f910e6f"
-      },
       "source": [
         "# Load the saved model\n",
         "loaded_model = keras.models.load_model('lstm_sentiment_model.h5')\n",
@@ -2985,61 +3002,11 @@
         "    print(f\"Tweet: '{original_tweet}'\")\n",
         "    print(f\"Predicted Sentiment: {predicted_sentiment}\\n\")"
       ],
-      "execution_count": 77,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Loaded LSTM model from 'lstm_sentiment_model.h5'\n",
-            "Loaded tokenizer from 'tokenizer.pickle'\n",
-            "\n",
-            "Preprocessed new tweets:\n",
-            "Original: 'This airline service was excellent! Very friendly staff.'\n",
-            "Preprocessed: 'airline service excellent friendly staff'\n",
-            "\n",
-            "Original: 'My flight was delayed for 3 hours. Terrible experience.'\n",
-            "Preprocessed: 'flight delayed hours terrible experience'\n",
-            "\n",
-            "Original: 'The flight was okay, nothing special.'\n",
-            "Preprocessed: 'flight okay nothing special'\n",
-            "\n",
-            "Original: 'Had a great flight with comfortable seats and good entertainment.'\n",
-            "Preprocessed: 'great flight comfortable seats good entertainment'\n",
-            "\n",
-            "Original: 'Lost my luggage. Very disappointed with the handling.'\n",
-            "Preprocessed: 'lost luggage disappointed handling'\n",
-            "\n",
-            "\n",
-            "Shape of padded new sequences (X_new_pad): (5, 21)\n",
-            "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 386ms/step\n",
-            "\n",
-            "Predictions on new tweets:\n",
-            "Tweet: 'This airline service was excellent! Very friendly staff.'\n",
-            "Predicted Sentiment: positive\n",
-            "\n",
-            "Tweet: 'My flight was delayed for 3 hours. Terrible experience.'\n",
-            "Predicted Sentiment: negative\n",
-            "\n",
-            "Tweet: 'The flight was okay, nothing special.'\n",
-            "Predicted Sentiment: negative\n",
-            "\n",
-            "Tweet: 'Had a great flight with comfortable seats and good entertainment.'\n",
-            "Predicted Sentiment: positive\n",
-            "\n",
-            "Tweet: 'Lost my luggage. Very disappointed with the handling.'\n",
-            "Predicted Sentiment: negative\n",
-            "\n"
-          ]
-        }
-      ]
+      "metadata": {
+        "id": "U6ECbIl7H61p"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -3054,13 +3021,6 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "2400119b",
-        "outputId": "8e827cbc-15e4-4119-d136-26c1669f17db"
-      },
       "source": [
         "# Interpretation of Classification Report and Confusion Matrix\n",
         "\n",
@@ -3137,49 +3097,11 @@
         "    \" advanced techniques, more data augmentation for neutral tweets, or exploring different model architectures.\"\n",
         ")"
       ],
-      "execution_count": 78,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Interpretation of Model Performance:\n",
-            "\n",
-            "Analysis of Classification Report:\n",
-            "The classification report provides precision, recall, and F1-score for each sentiment class.\n",
-            "- **Precision** is the ability of the classifier not to label as positive a sample that is negative.\n",
-            "- **Recall** is the ability of the classifier to find all the positive samples.\n",
-            "- **F1-score** is the harmonic mean of precision and recall, providing a single metric that balances both.\n",
-            "For the 'negative' class, the model shows strong performance with high precision (0.86), recall (0.82), and F1-score (0.84). This indicates the model is good at correctly identifying negative tweets and minimizes false positives for this class.\n",
-            "The 'neutral' class has moderate performance with a precision of 0.51, recall of 0.59, and F1-score of 0.55. This suggests the model struggles more to accurately classify neutral tweets compared to negative ones.\n",
-            "The 'positive' class shows reasonable performance with a precision of 0.70, recall of 0.68, and F1-score of 0.69. It performs better than the 'neutral' class but not as well as the 'negative' class.\n",
-            "\n",
-            "Overall accuracy is 0.75, which is a general measure, but the class-specific metrics reveal the model's varying performance across different sentiments, especially the challenge in classifying neutral tweets.\n",
-            "\n",
-            "Analysis of Confusion Matrix:\n",
-            "The confusion matrix visually shows the counts of true positive, true negative, false positive, and false negative predictions.\n",
-            "- True Negatives (Negative classified as Negative): 1615\n",
-            "- False Positives (Neutral/Positive classified as Negative): 311\n",
-            "- False Negatives (Negative classified as Neutral/Positive): 274\n",
-            "- True Positives (Positive classified as Positive): 329\n",
-            "- False Positives (Negative/Neutral classified as Positive): 175\n",
-            "\n",
-            "From the confusion matrix:\n",
-            "- A significant number of negative tweets are correctly identified (1553).\n",
-            "- The model often confuses neutral tweets with negative (179) or positive (60).\n",
-            "- Positive tweets are sometimes misclassified as negative (78) or neutral (68).\n",
-            "- The diagonal values (1553, 341, 313) represent the number of correct predictions for each class.\n",
-            "\n",
-            "Summary of Model Performance and Insights:\n",
-            "The LSTM model demonstrates good overall accuracy in classifying airline sentiment, achieving 75.38% accuracy on the test set.\n",
-            "Its strongest performance is in identifying 'negative' tweets, as indicated by high precision, recall, and F1-score for this class. This is crucial for airlines to quickly identify and address negative feedback.\n",
-            "The model performs reasonably well on 'positive' tweets, but there is room for improvement.\n",
-            "The main weakness lies in classifying 'neutral' tweets, which are often confused with 'negative' or 'positive' sentiments. This lower performance on the neutral class is reflected in its lower precision, recall, and F1-score. This could be due to the often ambiguous nature of neutral language in tweets.\n",
-            "Insights from the sentiment distribution (seen in earlier EDA) show a predominance of negative tweets, and the model's ability to accurately identify these is a key strength for this dataset.\n",
-            "To improve the model, future work could focus on better handling of neutral sentiment, possibly through advanced techniques, more data augmentation for neutral tweets, or exploring different model architectures.\n"
-          ]
-        }
-      ]
+      "metadata": {
+        "id": "Tyran55vHwnx"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
